[gd_scene load_steps=47 format=3 uid="uid://b8s4bdrwvt6ii"]

[ext_resource type="Script" path="res://Ingame/game_objects/plant/plant.gd" id="1_6cwau"]
[ext_resource type="PackedScene" uid="uid://da5cbxfs88ulq" path="res://Ingame/game_objects/follow_player_eye/follow_player_eye.tscn" id="2_5gp4l"]
[ext_resource type="Texture2D" uid="uid://b354r0o7v03o5" path="res://Ingame/game_objects/plant/sprites/body.png" id="2_efv8u"]
[ext_resource type="Texture2D" uid="uid://c3qyxott3265g" path="res://Ingame/game_objects/plant/sprites/face/head-1.png" id="3_2pnyv"]
[ext_resource type="Script" path="res://Ingame/game_objects/plant/face.gd" id="3_8n2lx"]
[ext_resource type="Texture2D" uid="uid://du67db4tgynbg" path="res://Ingame/game_objects/plant/sprites/grass_particles.png" id="5_v3jap"]
[ext_resource type="Texture2D" uid="uid://desl15kuf0ppk" path="res://Ingame/game_objects/plant/sprites/leaves.png" id="6_llj5x"]
[ext_resource type="AudioStream" uid="uid://sky8kqb6bbx3" path="res://sfx/ingame_plant_grow.wav" id="8_e3a2y"]

[sub_resource type="AtlasTexture" id="AtlasTexture_i3qfq"]
atlas = ExtResource("6_llj5x")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_016bh"]
atlas = ExtResource("6_llj5x")
region = Rect2(100, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_edgwj"]
animations = [{
"frames": [SubResource("AtlasTexture_i3qfq"), SubResource("AtlasTexture_016bh")],
"loop": true,
"name": &"New Anim",
"speed": 1.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iqcfy"]
size = Vector2(16, 16)

[sub_resource type="Curve" id="Curve_njh6q"]
max_value = 2.0
_data = [Vector2(0, 0.490909), 0.0, 0.0, 0, 0, Vector2(0.197248, 0.818182), 0.0, 0.0, 0, 0, Vector2(1, 0.2), -4.57342, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_menq1"]
offsets = PackedFloat32Array(0, 0.225641, 0.415385, 0.682051, 0.994872, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0.635294, 1, 1, 1, 0.266628, 1, 1, 1, 0.0628205, 1, 1, 1, 0)

[sub_resource type="Animation" id="Animation_bwooh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("plant_body/face/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ij8e5"]
resource_name = "dying"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("plant_body/face/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27]
}

[sub_resource type="Animation" id="Animation_vtynm"]
resource_name = "happy"
length = 1.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("plant_body/face/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_87ikq"]
resource_name = "medium"
length = 1.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("plant_body/face/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19, 20, 21, 22]
}

[sub_resource type="Animation" id="Animation_gaqgs"]
resource_name = "water"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("plant_body/face/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_2aypd"]
resource_name = "water_dying"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("plant_body/face/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="Animation_s8fjr"]
resource_name = "water_medium"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("plant_body/face/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_514hx"]
_data = {
"RESET": SubResource("Animation_bwooh"),
"dying": SubResource("Animation_ij8e5"),
"happy": SubResource("Animation_vtynm"),
"medium": SubResource("Animation_87ikq"),
"water": SubResource("Animation_gaqgs"),
"water_dying": SubResource("Animation_2aypd"),
"water_medium": SubResource("Animation_s8fjr")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_7l78b"]
animation = &"dying"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_58b37"]
animation = &"happy"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kpayv"]
animation = &"medium"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_xlxf5"]
animation = &"water_dying"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_763ro"]
animation = &"water"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6iqca"]
animation = &"water_medium"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_87jgq"]
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_abnf2"]
advance_expression = "get_parent().health < 0.66"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wwd1n"]
advance_expression = "get_parent().health < 0.33"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bnr0w"]
advance_expression = "get_parent().health >= 0.33"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wxrln"]
advance_expression = "get_parent().health >= 0.66"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1p0cd"]
advance_expression = "is_instance_valid(get_parent().grow_tween)"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_reupl"]
advance_expression = "get_parent().health > 0.66 and not is_instance_valid(get_parent().grow_tween)"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ov2th"]
advance_expression = "is_instance_valid(get_parent().grow_tween)"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w6fob"]
advance_expression = "get_parent().health > 0.33 and get_parent().health <= 0.66 and not is_instance_valid(get_parent().grow_tween)"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_migxv"]
advance_expression = "is_instance_valid(get_parent().grow_tween)"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dy6do"]
advance_expression = "get_parent().health <= 0.33 and not is_instance_valid(get_parent().grow_tween)"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xucoh"]
advance_expression = "get_parent().health < 0.66 and is_instance_valid(get_parent().grow_tween)"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_d8s67"]
advance_expression = "get_parent().health < 0.33 and is_instance_valid(get_parent().grow_tween)"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_lc3ua"]
advance_expression = "get_parent().health > 0.66 and not is_instance_valid(get_parent().grow_tween)"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1p242"]
advance_expression = "get_parent().health <= 0.33 and not is_instance_valid(get_parent().grow_tween)"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sebrb"]
advance_expression = "get_parent().health > 0.33 and get_parent().health <= 0.66 and not is_instance_valid(get_parent().grow_tween)"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_5e1om"]
states/Start/position = Vector2(187, 61.0687)
states/dying/node = SubResource("AnimationNodeAnimation_7l78b")
states/dying/position = Vector2(750.685, 70.21)
states/happy/node = SubResource("AnimationNodeAnimation_58b37")
states/happy/position = Vector2(382.038, 60.3531)
states/medium/node = SubResource("AnimationNodeAnimation_kpayv")
states/medium/position = Vector2(556.685, 6.71)
states/water_dying/node = SubResource("AnimationNodeAnimation_xlxf5")
states/water_dying/position = Vector2(775.711, 275.456)
states/water_happy/node = SubResource("AnimationNodeAnimation_763ro")
states/water_happy/position = Vector2(292.185, 275.833)
states/water_medium/node = SubResource("AnimationNodeAnimation_6iqca")
states/water_medium/position = Vector2(554.948, 266.703)
transitions = ["Start", "happy", SubResource("AnimationNodeStateMachineTransition_87jgq"), "happy", "medium", SubResource("AnimationNodeStateMachineTransition_abnf2"), "medium", "dying", SubResource("AnimationNodeStateMachineTransition_wwd1n"), "dying", "medium", SubResource("AnimationNodeStateMachineTransition_bnr0w"), "medium", "happy", SubResource("AnimationNodeStateMachineTransition_wxrln"), "happy", "water_happy", SubResource("AnimationNodeStateMachineTransition_1p0cd"), "water_happy", "happy", SubResource("AnimationNodeStateMachineTransition_reupl"), "medium", "water_medium", SubResource("AnimationNodeStateMachineTransition_ov2th"), "water_medium", "medium", SubResource("AnimationNodeStateMachineTransition_w6fob"), "dying", "water_dying", SubResource("AnimationNodeStateMachineTransition_migxv"), "water_dying", "dying", SubResource("AnimationNodeStateMachineTransition_dy6do"), "water_happy", "water_medium", SubResource("AnimationNodeStateMachineTransition_xucoh"), "water_medium", "water_dying", SubResource("AnimationNodeStateMachineTransition_d8s67"), "water_medium", "happy", SubResource("AnimationNodeStateMachineTransition_lc3ua"), "water_medium", "dying", SubResource("AnimationNodeStateMachineTransition_1p242"), "water_dying", "medium", SubResource("AnimationNodeStateMachineTransition_sebrb")]
graph_offset = Vector2(-91.1596, 2.73502)

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_addth"]

[node name="plant" type="Node2D" groups=["LEVEL_LISTENER", "PLANT"]]
z_index = 1
script = ExtResource("1_6cwau")

[node name="health_timer" type="Timer" parent="."]
autostart = true

[node name="plant_body" type="Node2D" parent="."]

[node name="body" type="Node2D" parent="plant_body"]

[node name="stem_sprite" type="Sprite2D" parent="plant_body/body"]
texture_filter = 1
texture_repeat = 2
position = Vector2(-7.824, 1.90735e-05)
texture = ExtResource("2_efv8u")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 16, 64)

[node name="face" type="Node2D" parent="plant_body" groups=["PLAYER_LISTENER"]]
position = Vector2(0, -32)
script = ExtResource("3_8n2lx")

[node name="follow_player_eye" parent="plant_body/face" instance=ExtResource("2_5gp4l")]
position = Vector2(-24, 4)

[node name="follow_player_eye2" parent="plant_body/face" instance=ExtResource("2_5gp4l")]
position = Vector2(16, 4)

[node name="sprite" type="Sprite2D" parent="plant_body/face"]
texture_filter = 1
texture = ExtResource("3_2pnyv")
hframes = 8
vframes = 4

[node name="leaves" type="AnimatedSprite2D" parent="plant_body"]
texture_filter = 1
position = Vector2(0, -32)
frames = SubResource("SpriteFrames_edgwj")
animation = &"New Anim"
playing = true

[node name="drop_target" type="Area2D" parent="plant_body"]
position = Vector2(0, -32)
collision_layer = 1024
collision_mask = 1024

[node name="drop_target_collider" type="CollisionPolygon2D" parent="plant_body/drop_target"]
polygon = PackedVector2Array(-8, -8, 8, -8, 24, 0, 24, 16, 11, 36, -10, 36, -24, 16, -24, 0)

[node name="damage_area" type="Area2D" parent="plant_body"]
collision_layer = 8192
collision_mask = 8192
monitoring = false

[node name="stem_collider" type="CollisionShape2D" parent="plant_body/damage_area"]
shape = SubResource("RectangleShape2D_iqcfy")

[node name="grass_particles" type="CPUParticles2D" parent="."]
texture_filter = 1
emitting = false
amount = 32
lifetime = 0.75
one_shot = true
explosiveness = 0.41
randomness = 0.39
texture = ExtResource("5_v3jap")
emission_shape = 3
emission_rect_extents = Vector2(16, 1)
direction = Vector2(0, -1)
spread = 70.0
initial_velocity_min = 100.0
initial_velocity_max = 350.0
angle_min = -418.5
angle_max = 295.4
scale_amount_curve = SubResource("Curve_njh6q")
color_ramp = SubResource("Gradient_menq1")

[node name="grow_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_e3a2y")
volume_db = -4.0
bus = &"sfx"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_514hx")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_5e1om")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_addth")

[connection signal="timeout" from="health_timer" to="." method="_on_health_timer_timeout"]
[connection signal="body_entered" from="plant_body/drop_target" to="." method="_on_plant_body_entered"]
